styles/main.css
/****************
 *
 * basic .css
 *
 * ***************/

/* general*/

.container {
  display : grid;
  width: 100%;
  margin: 1px;
}
.page-section {
  width: 100%;
  position: relative;
  background-color: inherit;
  /* this is the default height, can overwrite by using an ID*/
  height: 1200px;
}

/*columns*/
.column {
  float: left;
  width: 70%;
  height: 100%;
  position: relative;
}
.column-half {
  float: left;
  width: 50%;
  height: 100%;
  position: relative;
}
.column-quarter {
  float: left;
  width: 25%;
  height: 100%;
  position: relative;
}
.column-third {
  float: left;
  width: 33%;
  height: 100%;
  position: relative;
}
.column-small {
  float: left;
  width: 10%;
  height: 100%;
  position: relative;
}
.column-big {
  float: left;
  width: 80%;
  height: 100%;
  position: relative;
}

/*rows*/
.row {
  width: 100%;
  height: 50%;
  position: relative;
}
.row-half {
  width: 100%;
  height: 50%;
  position: relative;
}
.row-quarter {
  width: 100%;
  height: 25%;
  position: relative;
}
.row-third {
  width: 100%;
  padding-top: 3%;
  position: relative;
}
.row-big {
  width: 100%;
  height: 90%;
  position: relative;
}
.row-small {
  width: 100%;
  height: 10%;
  position: relative;
}
.row-smallest {
  width: 100%;
  height: 5%;
  position: relative;
}

/*images*/
.full-image {
  position: relative;
  width: 100%;
  height: 100%;
}
.full-width-image {
  position: relative;
  width: 100%;
}
.half-width-image {
  position: relative;
  width: 50%;
}
.column-top-image {
  position: absolute;
  top: 5%;
  width: 90%;
  padding-left: 5%;
  padding-right: 5%;
}
.column-mid-image {
  position: absolute;
  top: 50%;
  width: 90%;
  padding-left: 5%;
  padding-right: 5%;
}
.column-bottom-image {
  position: absolute;
  top: 80%;
  width: 90%;
  padding-left: 5%;
  padding-right: 5%;
}
.column-image-smallest-height {
  height: 5%;
}
.column-image-bigger-height {
  height: 20%;
}
.column-image-wider {
  width: 95%;
  padding-left: 2.5%;
  padding-right: 2.5%;
}

/****************
 *
 * index .css
 *
 * ***************/

/*
  maroon -- 641B36
*/

@font-face {
  font-family: "Abel", sans-serif;
  src:url(abel.ttf);
}

body {
  background-color: #F2F2F2;
  font-weight: normal;
}
#top-banner {
  width: 100%;
  height: 40px;
}
li {
  font-size: 1.875rem;
  color: #162753;
  font-family: "Abel", sans-serif;
  list-style-type: none;
}
h1 {
    color: #FEACC6;
    font-family: "Abel", sans-serif;
    font-size: 4.25rem;
    font-weight: lighter;
    position:  relative;
}
h2 {
  color: #FFFFFF;
  font-family: "Abel", sans-serif;
  font-weight: lighter;
  font-size: 2.625rem;
  position: relative;
  bottom: 10%;
}
h3 {
  color: #162753;
  font-family: "Abel", sans-serif;
  font-size: 2rem;
  font-weight: lighter;
}
h4 {
  color: #641B36;
  font-family: "Abel", sans-serif;
  font-size: 1.625rem;
  font-weight: lighter;
}
h5 {
  color: #E2C8B1;
  font-size: 2.25rem;
  font-family: "Abel", sans-serif;
}

/*
  nav
*/
.nav {
  height: 150px;
}
.nav-logo {
    height: 80px;
    width: 80px;
    padding-top: 15px;
    padding-bottom: 15px;
    padding-left: 15px;
}
.nav-links {
  float: right;
  margin-top:5%;
}
.nav-link {
    display: inline-block;
    float: left;
    padding: 0;
    margin: 10px;
}
.nav-bar-home {
  color: #162753;
}
.nav-bar-about {
  color: #162753;
}
.nav-bar-contact {
  color: #641B36;
}
.nav-bar-work{
  color: #641B36
}
.nav-bar-home:hover {
  color: #E2C8B1;
}
.nav-bar-about:hover {
  color: #E2C8B1;
}
.nav-bar-contact:hover {
  color: #E2C8B1;
}
.nav-bar-work:hover {
  color: #E2C8B1;
}

#desktop-nav-links {
}

.topNav {
  display: none;
}

/*
  Hero stuff
*/
#hero-page-section-home-page {
  background-color: #162753;
  height: 800px;
}
.hero-column {
  align-content: center;
}
#hero-column-content {
  position: relative;
  top: 10%;
  margin-left: 15%;
  text-align: left;
}
#hero-column-header {
    margin-bottom: 23%;
}
#hero-flower-image {
 position: relative;
 top: 10%;
 margin-left: 20%;
}

#hero-neb-text {
  top: 10%;
  position: relative;
  text-align: center;
}
#hero-neb-smaller-text {
  top: 10%;
  position: relative;
  text-align: center;
}
.hero-button-home-page {
    display: block;
    padding: 10px;
    text-align: center;
    font-weight: bold;
    line-height: 25px;

    background-color: #FEACC6;
    color: #162753;
    font-size: 1rem;
    font-family: "Abel", sans-serif;
    border-radius: 6px;
    width: 30%;
    position:relative;
    text-decoration: none;
    margin-top :10%;
}
/*
  Nebula row
*/
#nebula-page-section {
    height: 680px;
}
#nebula-column-three {
  width: 30%;
}
#nebula-neb-image {
 width : 573px;
 position: relative;
 padding-top: 7%;
 padding-left: 15%;
}
#nebula-content {
  position: relative;
  top: 30%;
  text-align: left;
}
#nebula-column-image-two {
  position: relative;
  top: 65%;
}
.nebula-button {
  background-color: #162753;
  color: #E2C8B1;
  font-family: "Abel", sans-serif;
  text-decoration: none;

  display: block;
  width: 115px;
  height: 25px;
  padding: 10px;
  text-align: center;
  border-radius: 5px;
  font-weight: bold;
  line-height: 25px;
  position: relative;
top: 38px;
}

/*
  bio section
*/
#bio-page-section {
  background-color:  #641B36;
  height: 800px;
}
.bio-column {
  float: left;
  width: 40%;
}
#flower-banner-1 {
  display: none;
}
#flower-banner-2 {
  display: none;
}
#footer-image-1 {
  display: none;
}

#bio-content-1 {
  padding-top: 5%;
  padding-left: 15%;
}
#bio-content-2 {
  padding-top:20%;
  padding-left: 10%;
}
#bio-text {
  color: #FFFFFF;
  font-size: 2.25rem;
  font-family: "Abel", sans-serif;
}
#bio-home-image {
  width: 418px;
  height: 433px;
}
#bio-link {
  color: #E2C8B1;
  font-size: 1.625rem;
  font-family: "Abel", sans-serif;
  padding-left: 17%;
  top: 50px;
position: relative;
}


/*
  skills
*/
#skills-page-section {
  height: 1050px;
  text-align: center;
  margin-top: 5%;
}
/* ... */

